package final_test_practice.decorator.bieu_thuc;

public abstract class BieuThuc {
    public abstract float giaTri();

    public abstract String getBieuThuc();
}
