@startuml
'https://plantuml.com/class-diagram

abstract class BieuThuc {
    + {abstract} float giaTri()
    + {abstract} void inBieuThuc()
}

class BieuThucCoBan {
    - float toanHang
}

class PhepTinh

class Tru {
    - float toanHang
}
class Cong {
    - float toanHang
}
class Nhan {
    - int toanHang
}
class Chia {
    - int toanHang
}

BieuThuc <|-- PhepTinh
BieuThuc <|-- BieuThucCoBan

PhepTinh <|-- Tru
PhepTinh <|--Cong
PhepTinh <|-- Nhan
PhepTinh <|-- Chia

PhepTinh ---> BieuThuc: bieuThuc

@enduml